# ai-recycling-buddy

./: .gitignore  Dockerfile  EVALUATION_SYSTEM.md  Makefile  README.md  evaluation_results.json  evaluation_test_cases.json  pyproject.toml
src/: Knowledge.py  graph.py  serve.py  streamlit_ui.py
src/agent/: answer_generator.py  chatter.py  document_relevence_checker.py  document_retriver.py  query_rewriter.py  route_question.py  state.py  web_searcher.py
src/evaluation/: __init__.py  evaluation_results.json  evaluation_results_1.json  evaluation_test_cases.json  generate_report.py  generate_test_suite.py  run_evaluation.py
src/utils/: cleaner.py  llm.py  logging.py  metaprompt.py
